Add computed expression alias support